--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
 <body>
 
 <form action="/items" method="post" onsubmit="return validate();">
-    <!--<div class="center">-->
+    &lt;!&ndash;<div class="center">&ndash;&gt;
     <div>
         <div>
             <div class="form-group">
@@ -68,7 +68,7 @@
         </tr>
     </table>
 </body>
-</html>
+</html>-->
 
 
 <!--
